--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -1,14 +1,14 @@
 // COLORS
-$primary-color: #c0c0aa;
-$secondary-color: #1cefff;
+$primary-color: #2980B9;
+$secondary-color: #FFFFFF;
 
-$white-color: #000428;
+$white-color: #03001e;
 
-$dark-grey: #000428;
+$dark-grey: #231849;
 
-$dark-blue-text: #e64fe6; // For Headings
+$dark-blue-text: #fdeff9; // For Headings
 
 // FONT SIZE
-$default-font-size: 2rem;
-$big-font-size: 6rem;
-$mid-font-size: 4rem;
+$default-font-size: 1.6rem;
+$big-font-size: 4rem;
+$mid-font-size: 2.5rem;
